--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
       - name: Eleventy
         run: |
-          npx eleventy --output='_site/' --pathprefix='/'
+          npx @11ty/eleventy
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
