--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,5 +29,5 @@ jobs:
         run: npm install
       - name: Eleventy
         run: |
-          npx eleventy --output='_site/' --pathprefix='/'
+          npx @11ty/eleventy
 
