--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "homepage": "https://github.com/Igalia/webengineshackfest#readme",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "markdown-it": "^13.0.2",
-    "gh-pages": "^3.0.0"
+    "gh-pages": "^6.2.0",
+    "markdown-it": "^13.0.2"
   },
   "scripts": {
     "start": "eleventy --serve",
